--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <div class="table-wrapper-scroll-y my-custom-scrollbar">
           <table class="table table-bordered">
-            <thead class="text-center ">
+            <thead class="text-center">
               <tr>
                 <!-- table headings -->
                 <th id="tableHead" scope="col">Name</th>
@@ -172,7 +172,6 @@
                 <th id="tableHead" class="tableHide" scope="col">Location</th>
                 <th id="tableHead" class="tableHide" scope="col">Email</th>
                 <th id="tableHead" scope="col">Actions</th>
-
               </tr>
             </thead>
             <tbody id="staffTable">
@@ -208,7 +207,7 @@
 
         <div class="table-wrapper-scroll-y my-custom-scrollbar">
           <table class="table table-bordered">
-            <thead class="text-center">
+            <thead>
               <tr>
                 <!-- table headings -->
                 <th id="tableHead" class="tableHide d-none" scope="col">ID</th>
@@ -246,11 +245,12 @@
 
         <div class="table-wrapper">
           <table class="table table-bordered ">
-            <thead class="text-center">
+            <thead>
               <tr>
-                <!-- table headings -->
                 <th id="tableHead" scope="col" class="d-none">ID</th>
                 <th id="tableHead" scope="col">Location</th>
+                <th id="tableHead" scope="col"># Departments</th>
+                <th id="tableHead" scope="col"># Employees</th>
                 <th id="tableHead" scope="col">Actions</th>
               </tr>
             </thead>
@@ -477,7 +477,7 @@
 
   <div class="toast toast-red" id="myToast">
     <div class="toast-header">
-      <strong class="me-auto">Cannot Delete</strong>
+      <strong class="me-auto">Unable to remove</strong>
       <button type="button" class="btn-close" title="Toasty" data-bs-dismiss="toast"></button>
     </div>
     <div class="toast-body">
