fixing toast errors and tables numbers unpadting for departments and employees

--- a/index.html
+++ b/index.html
@@ -41,15 +41,19 @@
 
 </head>
   
-<body>
 
-  <!-- Pre Loader -->
-  <div id="preloader">
-    <div class="spinner"></div>
-  </div>
+<body>
+ <!-- Pre Loader -->
+<!-- <div id="preloader">
+  <div class="spinner"></div>
+</div> -->
+
+  
     <h1 id="company-directory-heading">Company Directory</h1>
   
   <div class="container" id="main">
+
+ 
 
     <!--Nav Section-->
     
