--- a/index.html
+++ b/index.html
@@ -59,40 +59,43 @@
   </div>
   <div class="col-md-6 text-end">
       <!-- Action Buttons -->
+      <!-- Refresh Button -->
       <button id="refreshBtn" type="button" class="btn btn-primary" aria-label="Refresh">
           <i class="fas fa-sync-alt"></i>
       </button>
-      <!-- Filter Button to trigger Modal -->
-      <!-- Existing Filter Button -->
-<button id="filterBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#filterModal" aria-label="Filter">
-  <i class="fas fa-filter"></i>
-</button>
 
-<!-- New Filter Button for Locations -->
-<button id="locationsFilterBtn" type="button" class="btn btn-primary d-none" aria-label="Filter Locations">
-  <i class="fas fa-filter"></i>
-</button>
+      <!-- Filter Button to Trigger Modal for Existing Filters -->
+      <button id="filterBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#filterModal" aria-label="Filter" data-bs-backdrop="false">
+          <i class="fas fa-filter"></i>
+      </button>
 
-      <button id="addBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" aria-label="Add New">
+      <!-- New Filter Button for Locations -->
+      <button id="locationsFilterBtn" type="button" class="btn btn-primary d-none" aria-label="Filter Locations" data-bs-backdrop="false">
+          <i class="fas fa-filter"></i>
+      </button>
+
+      <!-- Add New Button -->
+      <button id="addBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" aria-label="Add New" data-bs-backdrop="false">
           <i class="fas fa-plus"></i>
       </button>
   </div>
 </div>
 
+
 <!-- Navigation Tabs -->
 <ul class="nav nav-pills nav-tabs mb-3" id="pills-tab" role="tablist">
   <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+      <button class="nav-link active" title="Employees" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
           <i class="fas fa-user"></i>
       </button>
   </li>
   <li class="nav-item" role="presentation">
-      <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+      <button class="nav-link" title="Departments" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
           <i class="fas fa-building"></i>
       </button>
   </li>
   <li class="nav-item" role="presentation">
-      <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+      <button class="nav-link" title="Locations" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
           <i class="fas fa-map-marker-alt"></i>
       </button>
   </li>
@@ -139,7 +142,7 @@
 </div>
 
 <!-- Filter Modal -->
-<div class="modal" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true" data-backdrop="false">
+<div class="modal" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-primary">
@@ -194,9 +197,7 @@
 <!-- Employees -->
 
  <!-- Add Employee Modal -->
- <div class="modal" id="insertNewEmployee" tabindex="-1" aria-labelledby="insertNewEmployeeLabel" aria-hidden="true">
-  <!-- TODO: Consider making the modal draggable for better UX -->
-
+ <div class="modal" id="insertNewEmployee" tabindex="-1" aria-labelledby="insertNewEmployeeLabel" aria-hidden="true" data-bs-backdrop="false">
   <!-- Modal Dialog -->
   <div class="modal-dialog modal-dialog-centered">
     <!-- Modal Content -->
@@ -212,45 +213,36 @@
       <div class="modal-body">
         <!-- Employee Form -->
         <form id="addEmployee">
-          <!-- TODO: Add client-side validation for each input -->
-          
           <!-- First Name Input -->
           <div class="form-floating mb-3">
-            <span class="form-floating-text"></span>
             <input type="text" class="form-control" name="firstName" id="addFirstName" required>
             <label for="firstName">First Name</label>
           </div>
 
           <!-- Last Name Input -->
           <div class="form-floating mb-3">
-            <span class="form-floating-text"></span>
             <input type="text" class="form-control" name="lastName" required>
             <label for="lastName">Last Name</label>
           </div>
 
           <!-- Job Title Input -->
           <div class="form-floating mb-3">
-            <span class="form-floating-text"></span>
             <input type="text" class="form-control" name="jobTitle" placeholder="Optional">
             <label for="jobTitle">Job Title</label>
           </div>
 
           <!-- Email Input -->
           <div class="form-floating mb-3">
-            <span class="form-floating-text"></span>
             <input type="email" class="form-control" name="email" required>
             <label for="email">Email</label>
           </div>
 
           <!-- Department Dropdown -->
           <div class="form-floating mb-3">
-            <span class="form-floating-text"></span>
             <select class="form-select departments" id="newDeptDrop" name="departmentID" required></select>
             <label for="newDeptDrop">Department</label>
           </div>
         </form>
-
-        <!-- TODO: Possibly add a loader/spinner here to show while waiting for server response -->
         <div id="newemployeeResponse"></div>
       </div>
 
@@ -262,11 +254,11 @@
         </button>
         <!-- Submit Button -->
         <button type="submit" class="btn btn-primary" form="addEmployee">Add New Employee</button>
-        <!-- TODO: Add a reset button to clear the form -->
       </div>
     </div>
   </div>
 </div>
+
 
 <!-- Edit Employee Modal -->
 <!-- TODO: Consider making the modal draggable for better UX -->
@@ -356,45 +348,63 @@
   </div>
 </div>
 
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-header bg-danger">
+              <h4 class="modal-title text-white w-100 text-center" id="deleteModalLabel">Delete Confirmation</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Are you sure you want to delete this item?</p>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button id="confirmDeleteBtn" type="button" class="btn btn-danger">Delete</button>
+          </div>
+      </div>
+  </div>
+</div>
+
+
 
     <!-- DEPARTMENTS -->
 
-    <!-- Add Dept -->
-    <div class="modal" id="insertNewDepartment" tabindex="-1" aria-labelledby="insertNewDepartmentLabel" aria-hidden="true" data-backdrop="false">
-
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header bg-primary addDepModal">
-            <h5 class="modal-title text-white w-100 text-center" id="insertNewDepartmentLabel">Add New Department</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Add Department Modal -->
+<div class="modal" id="insertNewDepartment" tabindex="-1" aria-labelledby="insertNewDepartmentLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-header bg-primary">
+              <h5 class="modal-title text-white w-100 text-center" id="insertNewDepartmentLabel">Add New Department</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form id="addDepartment">
-              <div class="form-floating mb-3">
-                <span class="form-floating-text"></span>
-                <input type="text" class="form-control" name="name" id="deptName"required>
-                <label for="deptName">Department Name</label>
-              </div>
-              <div class="form-floating mb-3">
-                <span class="form-floating-text"></span>
-                <select class="form-select locations" name="locationID" id="locName" required></select>
-                <label for="locName">Location</label>
-              </div>
-            </form>
-            <div id="newDeptResponse"></div>
+              <form id="addDepartment">
+                  <div class="form-floating mb-3">
+                      <input type="text" class="form-control" name="name" id="deptName" required>
+                      <label for="deptName">Department Name</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                      <select class="form-select locations" name="locationID" id="locName" required>
+                          <!-- Location options will be populated here -->
+                      </select>
+                      <label for="locName">Location</label>
+                  </div>
+              </form>
+              <div id="newDeptResponse"></div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-              Cancel
-            </button>
-            <button type="submit" class="btn btn-primary" form="addDepartment">Add Department</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary" form="addDepartment">Add Department</button>
           </div>
-        </div>
       </div>
-    </div>
+  </div>
+</div>
+
 
   <!-- Edit Department -->
-  <div class="modal" id="editDept2" tabindex="-1" aria-labelledby="editDeptLabel" aria-hidden="true" data-backdrop="false">
+  <div class="modal" id="editDept2" tabindex="-1" aria-labelledby="editDeptLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-primary">
@@ -420,6 +430,26 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-primary" form="editDeptForm">Submit Changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Delete Department Confirmation Modal -->
+<div class="modal fade" id="deleteDeptModal" tabindex="-1" aria-labelledby="deleteDeptModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h4 class="modal-title text-white w-100 text-center" id="deleteDeptModalLabel">Delete Department Confirmation</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p id="deleteDeptConfirmationText">Are you sure you want to delete this department?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button id="confirmDeleteDeptBtn" type="button" class="btn btn-danger">Delete</button>
       </div>
     </div>
   </div>
@@ -461,41 +491,121 @@
 
 
     <!-- Edit Location -->
-    <div class="modal" id="editLocation" tabindex="-1" aria-labelledby="editLocationLabel" aria-hidden="true"> <!-- Removed the "fade" class -->
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+<div class="modal" id="editLocation" tabindex="-1" aria-labelledby="editLocationLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
           <div class="modal-header bg-primary">
-            <h4 class="modal-title w-100 text-center text-white" id="editLocationLabel">Edit Location</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <h4 class="modal-title w-100 text-center text-white" id="editLocationLabel">Edit Location</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form id="editLocationForm">
-              <div class="form-floating mb-3">
-                <select class="form-select locations" name="id" id="editLocationSelect" hidden></select>
-              </div>
-              <div class="form-floating mb-3">
-                <span class="form-floating-text"></span>
-                <input type="text" id="editLocationName" class="form-control" name="name" required>
-                <label for="editLocationName">Name</label>
-              </div>
-            </form>
-            <div id="editLocResponse"></div>
+              <form id="editLocationForm">
+                  <input type="hidden" name="id" id="editLocationId"> <!-- Hidden input for ID -->
+                  <div class="form-floating mb-3">
+                      <input type="text" id="editLocationName" class="form-control" name="name" required>
+                      <label for="editLocationName">Name</label>
+                  </div>
+              </form>
+              <div id="editLocResponse"></div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-              Cancel
-            </button>
-            <button type="submit" class="btn btn-primary" form="editLocationForm">Submit Changes</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  Cancel
+              </button>
+              <button type="submit" class="btn btn-primary" form="editLocationForm">Submit Changes</button>
           </div>
-        </div>
+      </div>
+  </div>
+</div>
+
+<!-- Delete Location Confirmation Modal -->
+<div class="modal fade" id="deleteLocationModal" tabindex="-1" aria-labelledby="deleteLocationModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h4 class="modal-title text-white w-100 text-center" id="deleteLocationModalLabel">Delete Location Confirmation</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p id="deleteLocationConfirmationText"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button id="confirmDeleteLocationBtn" type="button" class="btn btn-danger">Delete</button>
       </div>
     </div>
-
-
   </div>
+</div>
+
+<!-- Success Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-success">
+        <h4 class="modal-title text-white w-100 text-center" id="successModalLabel">Success</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="successModalBody">
+        <!-- Success message content goes here -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Error Modal -->
+<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h4 class="modal-title text-white w-100 text-center" id="errorModalLabel">Error</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="errorModalBody">
+        <!-- Error message content goes here -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Location Error Modal -->
+<div class="modal fade" id="deleteLocationErrorModal" tabindex="-1" aria-labelledby="deleteLocationErrorModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h4 class="modal-title text-white w-100 text-center" id="deleteLocationErrorModalLabel">Error</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p id="deleteLocationErrorText"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Location Success Modal -->
+<div class="modal fade" id="deleteLocationSuccessModal" tabindex="-1" aria-labelledby="deleteLocationSuccessModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-success">
+        <h4 class="modal-title text-white w-100 text-center" id="deleteLocationSuccessModalLabel">Success</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p id="deleteLocationSuccessText"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-  <!-- Toast section -->
+
+<!-- Toast section -->
 
 <!-- Toast for successful operations -->
 <div class="toast toast-green" id="successToast">
@@ -615,7 +725,6 @@
     <button id="cancelDeptDelete" type="button" class="btn btn-secondary">Cancel</button>
   </div>
 </div>
-
 
 
 
