Refactor department deletion logic and update table styling
- PHP (deleteDept.php): Changed SQL query to count employees in a department. Simplified data processing and adjusted output to employee count for efficiency.

- JavaScript (checkDeptForDependencies): Updated function for employee count processing. Removed name list generation logic. Modified user feedback to display dependent employee count.

- HTML (deleteDeptErrorModal): Updated modal title to 'Department Deletion Error'. Altered modal body comment for clarity in displaying deletion errors.

- SCSS: Aligned table styling for consistent layout. Set fixed width for last columns in tables and adjusted button layout. Applied flexbox styling for responsiveness. Updated '.tab-content' class for functional overflow handling in table views.

These changes enhance efficiency and user experience in department management, ensuring consistent table styling and effective display of dependent employee data.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>Company Database</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="/biz.png" type="image/png"> <!-- Specifying the type can help some browsers -->
+  <link rel="icon" href="biz.png" type="image/png"> <!-- Specifying the type can help some browsers -->
 
   <!-- Social Meta Tags -->
   <!-- Twitter -->
@@ -383,15 +383,16 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-danger">
-        <h4 class="modal-title text-white w-100 text-center" id="deleteDeptErrorModalLabel">Employee Dependency</h4>
+        <h4 class="modal-title text-white w-100 text-center" id="deleteDeptErrorModalLabel">Department Deletion Error</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="deleteDeptErrorModalBody">
-        <!-- Department dependency error message content goes here -->
+        <!-- Department deletion error message content goes here -->
       </div>
     </div>
   </div>
 </div>
+
 
 
 
