updates for README and refactor

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-danger">
-        <h4 class="modal-title text-white w-100 text-center" id="deleteDeptErrorModalLabel">Department Deletion Error</h4>
+        <h4 class="modal-title text-white w-100 text-center" id="deleteDeptErrorModalLabel">Unable To Delete Department</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="deleteDeptErrorModalBody">
@@ -565,7 +565,8 @@
 
 
 
-<!-- Toast section -->
+<!-- Toast section within a container -->
+<div id="toast-container">
 
 <!-- Toast for successful operations -->
 <div class="toast toast-green" id="successToast">
@@ -686,7 +687,7 @@
   </div>
 </div>
 
-
+</div>
 
   <!-- Footer section -->
   
